--- a/views/users/login.ejs
+++ b/views/users/login.ejs
@@ -121,6 +121,7 @@
     <input type="password" name="password" placeholder="Enter Password">
     <input type="submit" value="Login">
   </form>
+  <p><a href="/quickshop">Not Registered?Continue to Register</a></p>
   <a href="/forget">Forget Password</a>
 
   <% if (typeof message !== 'undefined') { %>
