--- a/views/users/email-verified.ejs
+++ b/views/users/email-verified.ejs
@@ -4,50 +4,47 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Email Verified</title>
+    <!-- Bootstrap CSS -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
     <style>
-        body {
-            font-family: 'Arial', sans-serif;
-            background-color: #f5f5f5;
-            margin: 0;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            height: 100vh;
-            flex-direction: column; /* Align items in a column */
-        }
-
-        header {
-            background-color: #333;
-            color: #fff;
+        /* Additional CSS styles */
+        .verified-block {
+            border-radius: 10px;
             padding: 20px;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
             text-align: center;
-            width: 100%;
-            box-sizing: border-box;
-            margin-bottom: 20px; /* Adjust the bottom margin as needed */
+            margin-bottom: 20px;
         }
 
         h1 {
-            color:aqua;
-            margin: 0;
+            color: aqua;
+            margin-top: 0;
             font-size: 2em;
         }
-      footer {
-      margin-top: 20px;
-      padding: 10px;
-      background-color: #333;
-      color: #fff;
-      text-align: center;
-      width: 100%;
-      box-sizing: border-box;
-      position: fixed;
-      bottom: 0;
-    }
+        
+        footer {
+            margin-top: 20px;
+            padding: 10px;
+            background-color: #333;
+            color: #fff;
+            text-align: center;
+            width: 100%;
+            box-sizing: border-box;
+            position: fixed;
+            bottom: 0;
+        }
     </style>
 </head>
 <body>
-    <header>
-        <h1>Your Email has been verified</h1>
-    </header>
+    <div class="container">
+        <div class="row justify-content-center">
+            <div class="col-md-6">
+                <div class="verified-block">
+                    <h1>Your Email has been verified</h1>
+                </div>
+            </div>
+        </div>
+    </div>
 
     <footer>
         &copy; 2023 Your QuickShop. All rights reserved.
