--- a/views/users/about.ejs
+++ b/views/users/about.ejs
@@ -92,6 +92,7 @@
         <p>
           If you have any questions or feedback, please feel free to contact us at
           <a href="mailto:info@quickshop.com">info@quickshop.com</a>.
+          <p style="text-align: center;"><a href='/home' style="color: blue; text-decoration: none; font-weight: bold;">Go to Home page</a></p>
         </p>
       </div>
     </div>
