--- a/views/users/email-verified.ejs
+++ b/views/users/email-verified.ejs
@@ -40,7 +40,9 @@
         <div class="row justify-content-center">
             <div class="col-md-6">
                 <div class="verified-block">
-                    <h1>Your Email has been verified</h1>
+                    <h1>Your Email has been verified.</h1>
+                    <br>
+                    <p style="text-align: center;"><a href='/login' style="color: blue; text-decoration: none; font-weight: bold;">Click here to log in</a></p>
                 </div>
             </div>
         </div>
