--- a/views/users/registration.ejs
+++ b/views/users/registration.ejs
@@ -182,7 +182,8 @@
         <input type="password" name="password" placeholder="Enter Password" class="form-control">
         <input type="submit" value="Register" class="btn btn-primary btn-block">
       </form>
-  
+      <p style="text-align: center;"><a href='/login' style="color: blue; text-decoration: none; font-weight: bold;">Click here to log in</a></p>
+
       <% if (typeof message !== 'undefined') { %>
         <p class="text-center text-success"><%= message %></p>
       <% } %>
