--- a/views/users/home.ejs
+++ b/views/users/home.ejs
@@ -184,6 +184,9 @@
             <a class="nav-link" href="/about">About</a>
           </li>
           <li class="nav-item">
+            <a class="nav-link" href="/profile">My Profile</a>
+          </li>
+          <li class="nav-item">
             <a class="nav-link" href="/logout">Logout</a>
           </li>
         </ul>
